--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.9.0",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.22.0"
   }
 }
